@@ -18,8 +18,8 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    default_locale:       nl_NL
-    locales:              [nl_NL, en_GB]
+    default_locale:       {{ default_locale }}
+    locales:              [{{ enabled_locales | join(",") }}]
     locale_cookie_domain: {{ locale_cookie_domain }}
 
     secret:            {{ gateway_secret | vault(vault_keydir) }}
