@@ -18,8 +18,9 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    default_locale:    nl_NL
-    locales:           [nl_NL, en_GB]
+    default_locale:       {{ default_locale }}
+    locales:              [{{ enabled_locales | join(",") }}]
+
     secret:            {{ middleware_secret | vault(vault_keydir) }}
 
     use_assetic_controller: true
