@@ -6,10 +6,11 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    default_locale:       nl_NL
-    locales:              [nl_NL, en_GB]
-    secret:               {{ ra_secret | vault(vault_keydir) }}
+    default_locale:       {{ default_locale }}
+    locales:              [{{ enabled_locales | join(",") }}]
     locale_cookie_domain: {{ locale_cookie_domain }}
+
+    secret:               {{ ra_secret | vault(vault_keydir) }}
 
     debug_toolbar:          true
     debug_redirects:        false
